@@ -18,7 +18,6 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
@@ -26,10 +25,7 @@ import java.util.function.Consumer;
 
 import org.eclipse.emf.common.util.URI;
 import org.eclipse.emf.ecore.resource.Resource;
-import org.eclipse.emf.edit.domain.AdapterFactoryEditingDomain;
 import org.eclipse.sirius.web.application.editingcontext.EditingContext;
-import org.eclipse.sirius.web.application.editingcontext.services.api.IEditingDomainFactory;
-import org.eclipse.syson.application.configuration.SysMLEditingContextProcessor;
 import org.eclipse.syson.sysml.upload.SysMLExternalResourceLoaderService;
 
 /**
@@ -41,26 +37,21 @@ public class SysMLv2SemanticImportChecker {
 
     private final SysMLExternalResourceLoaderService sysmlResourceLoader;
 
-    private final IEditingDomainFactory editingDomainFactory;
-
-    private final SysMLEditingContextProcessor sysMLEditingContextProcessor;
-
     private final List<Consumer<Resource>> semanticCheckers = new ArrayList<>();
 
-    public SysMLv2SemanticImportChecker(SysMLExternalResourceLoaderService sysmlResourceLoader, IEditingDomainFactory editingDomainFactory, SysMLEditingContextProcessor sysMLEditingContextProcessor) {
+    private final EditingContext editingContext;
+
+
+    public SysMLv2SemanticImportChecker(SysMLExternalResourceLoaderService sysmlResourceLoader, EditingContext editingContext) {
+        this.editingContext = Objects.requireNonNull(editingContext);
         this.sysmlResourceLoader = Objects.requireNonNull(sysmlResourceLoader);
-        this.editingDomainFactory = Objects.requireNonNull(editingDomainFactory);
-        this.sysMLEditingContextProcessor = Objects.requireNonNull(sysMLEditingContextProcessor);
     }
 
     public void check(String importedText) throws IOException {
         UUID uuid = UUID.randomUUID();
-        AdapterFactoryEditingDomain editingDomain = this.editingDomainFactory.createEditingDomain();
-        EditingContext editingContext = new EditingContext(UUID.randomUUID().toString(), editingDomain, Map.of(), List.of());
-        this.sysMLEditingContextProcessor.preProcess(editingContext);
 
         try (var inputStream = new ByteArrayInputStream(importedText.getBytes())) {
-            Optional<Resource> optLoadedResources = this.sysmlResourceLoader.getResource(inputStream, this.createFakeURI(uuid), editingDomain.getResourceSet(), false);
+            Optional<Resource> optLoadedResources = this.sysmlResourceLoader.getResource(inputStream, this.createFakeURI(uuid), this.editingContext.getDomain().getResourceSet(), false);
 
             assertTrue(optLoadedResources.isPresent());
 
